ui_tests/infer_vars_3.stderr
error: inferring types is not allowed in item signatures
  ┌─ main.box:7:13
  │
7 │ fn bar() -> ? {
  │             ^

