ui_tests/infer_vars_3.box
fn foo[T](a: T) -> T {
    a
}

type Awk {}

fn bar() -> ? {
    foo[Awk](new Awk {})
}